<resources>
    <string name="app_name">Pigeon SMS Gateway</string>
    <string name="app_first_name">Pigeon</string>
    <string name="app_last_name">SMS Gateway</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="text1">Acesse nosso menu de opções, ou envie uma mensagem agora.</string>
    <string name="text2">Confira o número e a mensagem antes de enviar a mensagem</string>

    <string name="about">Sobre</string>
    <string name="who_developed">
        O aplicativo Pigeon SMS Gateway foi desenvolvido e é mantido pela
        <a href="https://code.realmapp.com.br">CodeRealm</a>.
    </string>

    <string name="documentation_title">Documentação</string>
    <string name="settings_title">Configurações</string>
    <string name="sms_list_title">Suas mensagens</string>
    <string name="documentation_link">Ir para a documentação</string>

    <string name="hint_phone">Insira o número do celular</string>
    <string name="hint_message">Escreva a mensagem</string>

    <string name="btn_send">Enviar mensagem</string>
    <string name="btn_save">Salvar configurações</string>

    <string name="menu_options">Menu de opções</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_documentation">Docs</string>

    <string name="number">Número</string>
    <string name="message">Mensagem</string>

    <string name="endpoint">Endpoint</string>
    <string name="interval">Intervalo (milis)</string>
    <string name="device_id">ID do dispositivo</string>
    <string name="enable_sms_sending">Habilitar o envio de SMS</string>


    <string name="poweredBy">CodeRealm.</string>

    <string name="title_activity_sms">SMS</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="gateway_enabled">Gateway habilitado</string>
    <string name="gateway_disabled">Gateway desabilitado</string>

    <string name="message_sent">Mensagem enviada</string>
    <string name="message_failed">Falha no envio da mensagem</string>
    <string name="message_btn_switch">Olá!</string>
    <string name="disconnect">Desconectar</string>
    <string name="connect">Conectar</string>
    <string name="disconnect_gateway">Tem certeza que você deseja desconectar o Gateway? As SMS deixarão de ser enviadas!</string>
    <string name="connect_gateway">Ao iniciar o Gateway seus créditos ou bônus serão consumidos para envio de SMS!</string>
    <string name="start">Iniciar</string>
    <string name="stop">Parar</string>
    <string name="oops">Oops...</string>
    <string name="no_internet">Parece que você está sem conexão com a internet :(</string>

    <string name="see_messages">Ver mensagens enviadas</string>
    <string name="messages_sent_title">Mensagens enviadas</string>

    <string name="sms_from">SMS de:</string>

    <string name="copied">Copiado!</string>
    <string name="saved_settings">Configurações salvas!</string>

    Copiado


</resources>