<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_greedient"
    tools:context=".ui.DocsActivity">

    <TextView
        android:id="@+id/textViewDocs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/documentation_title"
        android:fontFamily="@font/msemi"
        android:textSize="26sp"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:background="@drawable/bg_banner"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDocs">

        <ImageView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pigeon"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/msemi"
            android:text="@string/about"
            android:textColor="@color/colorSubText"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/url_coderealm"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="15dp"
            android:fontFamily="@font/mreg"
            android:text="@string/who_developed"
            android:textColor="@color/colorSubText"
            android:textSize="14sp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_docs"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/msemi"
            android:background="@drawable/bg_button"
            android:text="@string/documentation_link"
            android:textColor="#FFF"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>