<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_greedient"
    tools:context=".ui.SMSActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:background="@drawable/bg_banner"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/msemi"
                android:text="@string/hint_message"
                android:textColor="@color/colorSubText"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:lineSpacingExtra="15dp"
                android:fontFamily="@font/mreg"
                android:text="@string/text2"
                android:textColor="@color/colorSubText"
                android:textSize="14sp"
                android:gravity="center_horizontal" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">
            <!-- <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_phone"
                app:tint="@color/colorPrimary"
                android:layout_marginLeft="10dp" /> -->

                <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/hint_phone"
                android:fontFamily="@font/mreg"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_margin="8dp"
                app:mask="(__) _____-____"
                app:maskCharacter="_"
                android:background="@null"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@color/white"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/number"
                android:fontFamily="@font/msemi"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintBottom_toTopOf="@id/layout_phone"
                app:layout_constraintTop_toTopOf="@id/layout_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="41dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layout_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">
                  <!--  <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_message"
                        app:tint="@color/colorPrimary"
                        android:layout_marginLeft="10dp" /> -->

                    <EditText
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/hint_message"
                        android:fontFamily="@font/mreg"
                        android:imeOptions="actionDone"
                        android:gravity="top"
                        android:layout_margin="15dp"
                        android:background="@null"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"/>


                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@color/white"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/message"
                    android:fontFamily="@font/msemi"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"

                    app:layout_constraintBottom_toTopOf="@id/layout_message"
                    app:layout_constraintTop_toTopOf="@id/layout_message"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="41dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <Button
                android:id="@+id/send"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/msemi"
                android:background="@drawable/bg_button"
                android:text="@string/btn_send"
                android:textColor="#FFF"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
